--- a/nosotros.html
+++ b/nosotros.html
@@ -1,48 +1,54 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nosotros</title>
-    <link rel="stylesheet" href="estilos.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sobre Nosotros</title>
+  <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <header>
-        <div class="header-container">
-            <img src="logo.png" alt="Logo Concesionario" class="logo">
-            <nav>
-                <ul class="menu">
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="contacte.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <header class="header-container" role="banner">
+    <img src="logo.png" alt="Logo de GPX's Concesionario" class="logo">
+    <nav role="navigation" aria-label="Menú principal">
+      <ul class="menu">
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="nosotros.html" aria-current="page">Nosotros</a></li>
+        <li><a href="contacte.html">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-        <section class="about-us">
-            <h1>Sobre Nosotros</h1>
-            <p>Somos un concesionario con más de 20 años de experiencia, dedicados a ofrecer coches de calidad a precios competitivos.</p>
-            <div class="about-us-details">
-                <div>
-                    <h3>Nuestra Misión</h3>
-                    <p>Proporcionar a nuestros clientes vehículos que se adapten a sus necesidades y presupuesto.</p>
-                </div>
-                <div>
-                    <h3>Nuestra Visión</h3>
-                    <p>Ser el concesionario líder en el mercado local gracias a nuestro compromiso con la calidad y el servicio.</p>
-                </div>
-                <div>
-                    <h3>Nuestros Valores</h3>
-                    <p>Confianza, transparencia y dedicación son la base de nuestro trabajo diario.</p>
-                </div>
-            </div>
-        </section>
-    </main>
+  <main id="contenido-principal" role="main">
+    <section class="about-us" aria-labelledby="titulo-nosotros">
+      <h1 id="titulo-nosotros">Sobre Nosotros</h1>
+      <p>
+        Somos un concesionario con más de <strong>20 años de experiencia</strong>, dedicados a ofrecer coches de calidad a precios competitivos.
+      </p>
+      <div class="about-us-details">
+        <article>
+          <h2>Nuestra Misión</h2>
+          <p>
+            Proporcionar a nuestros clientes vehículos que se adapten a sus necesidades y presupuesto.
+          </p>
+        </article>
+        <article>
+          <h2>Nuestra Visión</h2>
+          <p>
+            Ser el concesionario líder en el mercado local gracias a nuestro compromiso con la calidad y el servicio.
+          </p>
+        </article>
+        <article>
+          <h2>Nuestros Valores</h2>
+          <p>
+            Confianza, transparencia y dedicación son la base de nuestro trabajo diario.
+          </p>
+        </article>
+      </div>
+    </section>
+  </main>
 
-    <footer>
-        <p>&copy; 2024 GPX's Concessionaire | Todos los derechos reservados</p>
-    </footer>
+  <footer role="contentinfo">
+    <p>&copy; 2024 GPX's Concessionaire | Todos los derechos reservados</p>
+  </footer>
 </body>
 </html>
